--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -11,5 +11,13 @@
 </head>
 <body>
   <app-root></app-root>
+  <footer>
+    <img src = "../src/assets/fgsr.png" alt="FGSR logo">
+    <span class="icons">
+      <a href="https://www.facebook.com/fundaciongsr/?fref=ts" class="generic-anchor" target="_blank" title="Facebook"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://twitter.com/fundacionGSR" class="generic-anchor" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.youtube.com/channel/UCsWvIPPOWDPj8mayJmlA-gA" class="generic-anchor" target="_blank" title="Youtube"><i class="fab fa-youtube"></i></a>
+      </span>
+  </footer>
 </body>
 </html>
